@@ -31,6 +31,7 @@ using namespace testing;
 #include "lockscreen/LockScreenSettings.h"
 #include "lockscreen/ScreenSaverDBusManager.h"
 #include "unity-shared/DashStyle.h"
+#include "unity-shared/InputMonitor.h"
 #include "unity-shared/PanelStyle.h"
 #include "unity-shared/UScreen.h"
 #include "mock_key_grabber.h"
@@ -106,6 +107,7 @@ struct TestLockScreenController : Test
   nux::animation::AnimationController animation_controller;
 
   MockUScreen uscreen;
+  unity::input::Monitor im;
   unity::dash::Style dash_style;
   unity::panel::Style panel_style;
   unity::lockscreen::Settings lockscreen_settings;
@@ -255,7 +257,7 @@ TEST_F(TestLockScreenController, ShieldHasGrabAfterBlank)
   tick_source.tick(BLANK_ANIMATION_DURATION);
 
   ASSERT_TRUE(controller.blank_window_->GetOpacity() == 1.0);
-  ASSERT_TRUE(controller.blank_window_->OwnsPointerGrab());
+  ASSERT_FALSE(controller.blank_window_->OwnsPointerGrab());
 
   // Wake the screen
   dbus_manager->simulate_activity.emit();
